# infographic

./: .gitignore  README.md  config.default.toml  pyproject.toml  wallpaper_rotate.sh
src/infographic/: cli.py  config.py  pipeline.py
src/infographic/data/: proverbs.json  quotes.json
src/infographic/generator/: nano_banana.py
src/infographic/postprocess/: eink.py
src/infographic/prompt/: composer.py
src/infographic/sources/: __init__.py  base.py  calendar_source.py  paperboy.py  proverbs.py  quotes.py  rss.py
src/infographic/themes/: __init__.py  catalog.py
